--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_NAME=''
-DB_USER=''
-DB_PASSWORD=''
+DB_NAME='hottakes_db'
+DB_USER='root'
+DB_PASSWORD='root123'
 SECRET="Super secret secret"
 HOST="127.0.0.1"
