--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_NAME=''
-DB_USER=''
-DB_PASSWORD=''
-SECRET="Super secret secret"
+DB_NAME='hottakes_db'
+DB_USER='root'
+DB_PASSWORD='piFyP89%c2'
+SECRET='special super secret'
 HOST="127.0.0.1"
