--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,8 @@ DB_USER=''
 DB_PASSWORD=''
 SECRET="Super secret secret"
 HOST="127.0.0.1"
+DB_NAME=hottakes_db
+DB_USER=root
+DB_PASSWORD=1973Delatour10$
+SECRET=Super secret secret
+HOST="127.0.0.1"
